--- a/frontend/src/scss/App.css
+++ b/frontend/src/scss/App.css
@@ -1,17 +1,7 @@
-.App {
+.readable {
   text-align: center; }
-
-.App-header {
-  background-color: #222;
-  height: 60px;
-  padding: 20px;
-  color: white; }
-
-.App-intro {
-  font-size: large; }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
+  .readable__hdr {
+    background-color: #222;
+    height: 60px;
+    padding: 20px;
+    color: white; }
