- Added Root.js so I could breakout App.js to it's own page. - Cleaned up actions and reducers so setCategory handles the brunt of the display. - Added redux-logger instead of custom logger.

--- a/frontend/src/scss/App.css
+++ b/frontend/src/scss/App.css
@@ -12,6 +12,9 @@ body {
   color: white;
   text-align: center;
   line-height: 56px; }
+  .readable .header__hdr--link {
+    color: #fff;
+    text-decoration: none; }
 
 .readable .categories {
   padding: 20px;
