--- a/frontend/src/scss/components/_header.scss
+++ b/frontend/src/scss/components/_header.scss
@@ -6,5 +6,11 @@
     color: white;
     text-align: center;
     line-height: 56px;
+    &__hdr {
+      &--link {
+        color: $color-white;
+        text-decoration: none;
+      }
+    }
   }
 }
