- Re-worked routes so the posts and edit componests are in their own container. - Because of the route change, I was able to move the category and posts actions to different components. - Also updated the reducers and actions to be a little more cleaner by only dealing with one data type. - Started intial form work and created a FormDisplay component.

--- a/frontend/src/scss/components/_post.scss
+++ b/frontend/src/scss/components/_post.scss
@@ -1,14 +1,9 @@
 .readable {
-  .categories {
+  .post {
     padding: 20px;
     border-bottom: 1px solid $color-grey;
     &__hdr {
       margin-bottom: 12px;
-    }
-    &__list {
-      &--item {
-        margin: 0 0 8px 36px;
-      }
     }
   }
 }
