--- a/frontend/src/scss/App.css
+++ b/frontend/src/scss/App.css
@@ -5,6 +5,9 @@
 body {
   font-family: sans-serif; }
 
+li {
+  list-style-type: none; }
+
 .readable .header {
   background-color: #222;
   height: 60px;
@@ -16,13 +19,18 @@ body {
     color: #fff;
     text-decoration: none; }
 
-.readable .categories {
+.readable .nav {
   padding: 20px;
   border-bottom: 1px solid #ccc; }
-  .readable .categories__hdr {
+  .readable .nav__list--item {
+    display: inline-block;
+    margin: 0 16px 8px 0; }
+
+.readable .post {
+  padding: 20px;
+  border-bottom: 1px solid #ccc; }
+  .readable .post__hdr {
     margin-bottom: 12px; }
-  .readable .categories__list--item {
-    margin: 0 0 8px 36px; }
 
 .readable .posts {
   padding: 20px;
@@ -30,7 +38,13 @@ body {
   .readable .posts__hdr {
     margin-bottom: 12px; }
   .readable .posts__list--item {
-    margin: 0 0 8px 36px; }
+    margin: 0 0 8px 0; }
+
+.readable .comments {
+  padding: 20px;
+  border-bottom: 1px solid #ccc; }
+  .readable .comments__hdr {
+    margin-bottom: 12px; }
 
 .readable .page-not-found {
   padding: 40px 0;
