--- a/frontend/src/scss/components/_nav.scss
+++ b/frontend/src/scss/components/_nav.scss
@@ -1,13 +1,11 @@
 .readable {
-  .posts {
+  .nav {
     padding: 20px;
     border-bottom: 1px solid $color-grey;
-    &__hdr {
-      margin-bottom: 12px;
-    }
     &__list {
       &--item {
-        margin: 0 0 8px 0;
+        display: inline-block;
+        margin: 0 16px 8px 0;
       }
     }
   }
