--- a/frontend/src/scss/components/_nav.scss
+++ b/frontend/src/scss/components/_nav.scss
@@ -1,6 +1,7 @@
 .readable {
   .nav {
-    padding: 20px;
+    padding: 26px 20px 20px;
+    line-height: 0;
     border-bottom: 1px solid $color-grey;
     &__list {
       &--item {
