--- a/frontend/src/scss/components/_posts.scss
+++ b/frontend/src/scss/components/_posts.scss
@@ -1,14 +1,18 @@
 .readable {
   .posts {
-    padding: 20px;
-    border-bottom: 1px solid $color-grey;
     &__hdr {
-      margin-bottom: 12px;
+      margin: 20px 0 0 20px;
     }
     &__list {
       &--item {
-        margin: 0 0 8px 0;
+        &.no-posts {
+          margin: 20px;
+        }
       }
     }
+  }
+  .post {
+    padding: 20px;
+    border-bottom: 1px solid $color-grey;
   }
 }
