--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -10,4 +10,5 @@
 @import "components/_nav.scss";
 @import "components/_posts.scss";
 @import "components/_comments.scss";
+@import "components/_forms.scss";
 @import "components/_pageNotFound.scss";
