- Added delete post and comment functionality using actions and reducers. - Added add post and add comment buttons.

--- a/frontend/src/scss/App.css
+++ b/frontend/src/scss/App.css
@@ -33,6 +33,9 @@ li {
 .readable .posts__list--item.no-posts {
   margin: 20px; }
 
+.readable .posts__controls {
+  margin: 20px 0 0 20px; }
+
 .readable .post {
   padding: 20px;
   border-bottom: 1px solid #ccc; }
@@ -42,6 +45,8 @@ li {
   border-bottom: 1px solid #ccc; }
   .readable .comments__hdr {
     margin-bottom: 12px; }
+  .readable .comments__actions {
+    padding: 20px 0 0; }
 
 .readable .form {
   padding: 0 20px; }
