--- a/frontend/src/scss/App.scss
+++ b/frontend/src/scss/App.scss
@@ -12,3 +12,4 @@
 @import "components/_comments.scss";
 @import "components/_forms.scss";
 @import "components/_pageNotFound.scss";
+@import "components/_votescore.scss";
