--- a/frontend/src/scss/components/_comments.scss
+++ b/frontend/src/scss/components/_comments.scss
@@ -5,8 +5,34 @@
     &__hdr {
       margin-bottom: 12px;
     }
+    &__list {
+      &--item {
+        margin-top: 12px;
+      }
+    }
     &__actions {
       padding: 20px 0 0;
+    }
+    .comment {
+      display: inline-block;
+      border-bottom: 1px solid $color-grey;
+      padding-bottom: 15px;
+      margin-bottom: 5px;
+      &__label {
+        font-size: 8px;
+        margin-right: 12px;
+        color: $color-grey;
+      }
+      &__info,
+      &__actions,
+      &__vote {
+        margin-top: 12px;
+      }
+      &__actions {
+        &--item {
+          margin-right: 12px;
+        }
+      }
     }
   }
 }
