--- a/frontend/src/scss/components/_posts.scss
+++ b/frontend/src/scss/components/_posts.scss
@@ -29,7 +29,8 @@
       margin-top: 12px;
     }
     &__info {
-      &--date {
+      &--date,
+      &--author {
         margin-right: 12px;
       }
     }
